# duh-scs-topmodel-lstm-forecasting-ar

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
analise/: analise_b1_b3.py  consolida_ar.py  consolida_gc_bylead.py  md_to_docx.py  persistencia_baseline.py  rerender_curva_nse_lead.py  rerender_skill_fig.py  skill_fig.py  skill_forcante.py  skill_gfs.csv  skill_ifs.csv
data/: twi_attrs.npz
outputs/: persistencia_baseline.json  teste_isolado_gc.json  teste_isolado_gc_bylead.json
outputs/grade_ar/LSTM/seed42/: results.json
outputs/grade_ar/LSTM/seed43/: results.json
outputs/grade_ar/LSTM/seed44/: results.json
outputs/grade_ar/LSTM/seed45/: results.json
outputs/grade_ar/LSTM/seed46/: results.json
outputs/grade_ar/LSTM_AR/seed42/: results.json
outputs/grade_ar/LSTM_AR/seed43/: results.json
outputs/grade_ar/LSTM_AR/seed44/: results.json
outputs/grade_ar/LSTM_AR/seed45/: results.json
outputs/grade_ar/LSTM_AR/seed46/: results.json
outputs/grade_ar/LSTM_DUH_Base_SCS/seed42/: results.json
outputs/grade_ar/LSTM_DUH_Base_SCS/seed43/: results.json
outputs/grade_ar/LSTM_DUH_Base_SCS/seed44/: results.json
outputs/grade_ar/LSTM_DUH_Base_SCS/seed45/: results.json
outputs/grade_ar/LSTM_DUH_Base_SCS/seed46/: results.json
outputs/grade_ar/LSTM_DUH_Base_SCS_AR/seed42/: results.json
scripts/: build_dataset_forecast_v2.py  consolida_gc.py  factory_forecast.py  run_ar.py  run_gc.py  run_noroute.py  run_sim.py  train.py
src/ttd_scs_lstm/: __init__.py
src/ttd_scs_lstm/data/: __init__.py  dataset.py  temporal.py
src/ttd_scs_lstm/models/: __init__.py  models.py  topmodel_diff.py
(+79 files in other folders)
